test/fixtures/basic/app/pages/invalid-root/2.vue
<!-- eslint-disable vue/no-multiple-template-root -->

<template>
  Just some text
</template>
